--- a/coding.html
+++ b/coding.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Anisa Nurrohmah</title>
+</head>
+<body>
 
+<h2 align="center"> Mata Kuliah Web</h2>
+<hr>
+
+<p align="center">
+<img src="c:\Users\ACER\Documents\Pemweb\foto saya.jpeg.jpg" align="center" width="200" height="200"><br>
+Nama : Anisa Nurrohmah<br>
+Npm : 2313025069
+</p>
+
+<p style="text-align: center; font-family: gill sans; font-size: large; color: brown;">
+Hobi: Mendengar Lagu<br>
+Favorit: <a href="https://open.spotify.com/artist/47z98pKd71yIbgXwe9LPVC?si=mgUNoU79T5ui1lib3Cad5w">Bernadya</a>
+</p>
+
+</body>
+</html>
